Filtre des tickets non fonctionnel corrigé + statut validation au lieu de termine (autre bug)